add some services - layerset structure; scss structure cleaned and reorganized; bugfixes; kill some unused code;

--- a/src/Mapbender/ManagerBundle/Resources/views/Repository/index.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Repository/index.html.twig
@@ -4,8 +4,7 @@
 
 {% block manager_content %}
 
-
-<label for="inputFilterServices" class="label left">Filter:</label><input id="inputFilterServices" type="text" class="input listFilterInput filterService">
+<label for="inputFilterServices" class="labelInput left">Filter:</label><input id="inputFilterServices" type="text" class="input listFilterInput filterService">
 <a class="button right" href="{{ url("mapbender_manager_repository_new") }}" title="{{ 'Add new service' | trans }}">{{ 'Add' | trans }}</a>
 
 <ul id="listFilterServices" class="listFilterContainer clear">
