--- a/src/Mapbender/WmsBundle/Resources/views/Repository/layer.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/layer.html.twig
@@ -1,104 +1,120 @@
 <ul class="itemLevel{{itemLevel}} list {% if itemLevel > 1 %}closed{% endif %}">
-  <li class="subTitle">{{ layer.title }}</li>
+  <li class="openCloseTitle">{{ layer.title }}</li>
+  {% if layer.name|length > 0 %}
+    <li>
+      <span class="labelText">{{"Name" | trans }}:</span>
+      <span class="metaText">{{ layer.name }}</span>
+    </li>
+  {% endif %}
+  {% if layer.title|length > 0 %}
   <li>
-    <span class="labelAlt">{{"Name" | trans }}:</span>
-    <span class="metaText">{{ layer.name }}</span>
-  </li>
-  <li>
-    <span class="labelAlt">{{"Title" | trans }}:</span>
+    <span class="labelText">{{"Title" | trans }}:</span>
     <span class="metaText">{{ layer.title }}</span>
   </li>
+  {% endif %}
+  {% if layer.abstract|length > 0 %}
   <li>
-    <span class="labelAlt">{{"Abstract" | trans }}:</span>
+    <span class="labelText">{{"Abstract" | trans }}:</span>
     <span class="metaText">{{ layer.abstract }}</span>
   </li>
+  {% endif %}
+  {% if layer.queryable|length > 0 %}
   <li>
-    <span class="labelAlt">{{"Queryable" | trans }}:</span>
+    <span class="labelText">{{"Queryable" | trans }}:</span>
     <span class="metaText">{{ layer.queryable }}</span>
   </li>
+  {% endif %}
+  {% if layer.cascaded|length > 0 %}
   <li>
-    <span class="labelAlt">{{"Cascaded" | trans }}:</span>
+    <span class="labelText">{{"Cascaded" | trans }}:</span>
     <span class="metaText">{{ layer.cascaded }}</span>
   </li>
+  {% endif %}
+  {% if layer.opaque|length > 0 %}
   <li>
-    <span class="labelAlt">{{"Opaque" | trans }}:</span>
+    <span class="labelText">{{"Opaque" | trans }}:</span>
     <span class="metaText">{{ layer.opaque }}</span>
   </li>
+  {% endif %}
+  {% if layer.noSubset|length > 0 %}
   <li>
-    <span class="labelAlt">{{"NoSubset" | trans }}:</span>
+    <span class="labelText">{{"NoSubset" | trans }}:</span>
     <span class="metaText">{{ layer.noSubset }}</span>
   </li>
+  {% endif %}
+  {% if layer.fixedWidth|length > 0 %}
   <li>
-    <span class="labelAlt">{{"FixedWidth" | trans }}:</span>
+    <span class="labelText">{{"FixedWidth" | trans }}:</span>
     <span class="metaText">{{ layer.fixedWidth }}</span>
   </li>
+  {% endif %}
+  {% if layer.fixedHeight|length > 0 %}
   <li>
-    <span class="labelAlt">{{"FixedHeight" | trans }}:</span>
+    <span class="labelText">{{"FixedHeight" | trans }}:</span>
     <span class="metaText">{{ layer.fixedHeight }}</span>
   </li>
-  <li>
-    <span class="labelAlt">{{ "LatlonBounds" | trans }}:</span>
-    {% if layer.latlonBounds != null %}
-      <span class="metaText">{{ layer.latlonBounds.srs }}</span>
-      <span class="metaText">{{ layer.latlonBounds.minx }},</span>
-      <span class="metaText">{{ layer.latlonBounds.miny }},</span>
-      <span class="metaText">{{ layer.latlonBounds.maxx }},</span>
-      <span class="metaText">{{ layer.latlonBounds.maxy }}</span>
-    {% endif %}
-  </li>
-  <li>
-    <span class="labelAlt">{{ "BoundingBox" | trans }}:</span>
-    <ul class="left">
-      {% for bbox in layer.boundingBoxes %}
-        <li>
-          <span class="metaText">{{ bbox.srs }} {{ bbox.minx }},{{ bbox.miny }},{{ bbox.maxx }},{{ bbox.maxy }}</span>
-        </li>
-      {% endfor %}
-    </ul>
-  </li>
-  <li>
-    <span class="labelAlt">{{ "Srs" | trans }}:</span>
-    {% for srs in layer.srs %}
-      {% if not loop.first %},{% endif %}<span class="metaText">{{ srs }}</span>
-    {% endfor %}
-  </li>
-  <li>
-    <span class="labelAlt">{{ "Styles" | trans }}:</span>
-    {% if layer.styles|length > 0 %}
-      {% for style in layer.styles %}
-        {% if not loop.first %}<br/>{% endif %}
-        <ul class="left">
-          <li><span class="metaText">{{ "Name" | trans }}: {{ style.name }}</span></li>
-          <li><span class="metaText">{{ "Title" | trans }}</dt>: {{ style.title }}</span></li>
-          <li><span class="metaText">{{ "Abstract" | trans }}: {{ style.abstract }}</span></li>
+  {% endif %}
+  {% if layer.latlonBounds != null %}
+    <li>
+      <span class="labelText left">{{ "LatlonBounds" | trans }}:</span>
+      <span class="metaText">{{ layer.latlonBounds.srs }} {{ layer.latlonBounds.minx }}, {{ layer.latlonBounds.miny }}, {{ layer.latlonBounds.maxx }}, {{ layer.latlonBounds.maxy }}</span>
+    </li>
+  {% endif %}
+  {% if layer.boundingBoxes|length > 0 %}
+    <li>
+      <span class="labelText left">{{ "BoundingBox" | trans }}:</span>
+      <ul class="left">
+        {% for bbox in layer.boundingBoxes %}
           <li>
-            <span class="metaText">
-              {{ "LegendUrl" | trans }}: 
-              {{ style.legendUrl.width }}X{{ style.legendUrl.height }}
-              {{ style.legendUrl.onlineResource.format }} {{ style.legendUrl.onlineResource.href }}
-            </span>
+            <span class="metaText">{{ bbox.srs }} {{ bbox.minx }},{{ bbox.miny }},{{ bbox.maxx }},{{ bbox.maxy }}</span>
           </li>
-        </ul>
-        <span class="metaText">
-          {{ "StyleSheetUrl" | trans }}:
-
-          {% if layer.styleSheetUrl is defined %}
-            {{ style.styleSheetUrl.format }} {{ style.styleSheetUrl.href }}
-          {% endif %}<br/>
-        </span>
-
-        <span class="metaText">
-          {{ "StyleUrl" | trans }}:
-          {% if layer.styleUrl is defined %}
-            {{ style.styleUrl.format }} {{ style.styleUrl.href }}
-          {% endif %}
-        </span>
         {% endfor %}
-    {% endif %}
+      </ul>
+    </li>
+  {% endif %}
+  {% if layer.srs|length > 0 %}
+  <li>
+    <span class="labelText left">{{ "Srs" | trans }}:</span>
+    <span class="metaText">
+      {% for srs in layer.srs %}
+        {% if not loop.first %}, {% endif %}{{ srs }}
+      {% endfor %}
+    </span>
   </li>
+  {% endif %}
+  {% if layer.styles|length > 0 %}
+    <li>
+      <span class="labelText left">{{ "Styles" | trans }}:</span>
+        {% for style in layer.styles %}
+          {% if not loop.first %}<br/>{% endif %}
+          <span class="metaText">{{ "Name" | trans }}: {{ style.name }}</span>
+          <span class="metaText">{{ "Title" | trans }}</dt>: {{ style.title }}</span>
+          <span class="metaText">{{ "Abstract" | trans }}: {{ style.abstract }}</span>
+          <span class="metaText">
+            {{ "LegendUrl" | trans }}: 
+            {{ style.legendUrl.width }}X{{ style.legendUrl.height }}
+            {{ style.legendUrl.onlineResource.format }} {{ style.legendUrl.onlineResource.href }}
+          </span>
+          <span class="metaText">
+            {{ "StyleSheetUrl" | trans }}:
+
+            {% if layer.styleSheetUrl is defined %}
+              {{ style.styleSheetUrl.format }} {{ style.styleSheetUrl.href }}
+            {% endif %}<br/>
+          </span>
+
+          <span class="metaText">
+            {{ "StyleUrl" | trans }}:
+            {% if layer.styleUrl is defined %}
+              {{ style.styleUrl.format }} {{ style.styleUrl.href }}
+            {% endif %}
+          </span>
+        {% endfor %}
+    </li>
+  {% endif %}
   {% if layer.scale is defined and layer.scale != '' %}
     <li>
-      <span class="labelAlt">{{ "Scale" | trans }}:</span>
+      <span class="labelText left">{{ "Scale" | trans }}:</span>
       <span class="metaText">
         {{ "Min" | trans }}:{{ layer.scale.min }}<br/>
         {{ "Max" | trans }}:{{ layer.scale.max }}</span>
@@ -106,36 +122,36 @@
   {% endif %}
   {% if layer.scaleHint is defined and layer.scaleHint != '' %}
   <li>
-    <span class="labelAlt">{{ "ScaleHint" | trans }}:</span>
+    <span class="labelText left">{{ "ScaleHint" | trans }}:</span>
     <span class="metaText">
       {{ "Min" | trans }}:{{ layer.scaleHint.min }}<br/>
       {{ "Max" | trans }}:{{ layer.scaleHint.max }}
     </span>
+  </li>
   {% endif %}
-  </li>
-  <li>
-    <span class="labelAlt">{{ "Attribution" | trans }}:</span>
-    {% if layer.attribution is defined and layer.attribution != '' %}
-      <ul class="left">
-        <li>
-          <span class="metaText">{{ "Title" | trans }}:{{ layer.attribution.title }}</span>
-        </li>
-        <li>
-          <span class="metaText">{{ "OnlineResource" | trans }}:{{ layer.attribution.onlineResource }}</span>
-        </li>
-        <li>
-          <span class="metaText">
-            {{ "LogoUrl" | trans }}:
-            {{ layer.attribution.logoUrl.width }}X{{layer.attribution.logoUrl.height }}
-            {{ layer.attribution.logoUrl.onlineResource.format }} {{ layer.attribution.logoUrl.onlineResource.href }}
-          </span>
-        </li>
-      </ul>
-    {% endif %}
-  </li>
-  <li>
-    <span class="labelAlt">{{ "Identifier" | trans }}:</span>
-    {% if layer.identifier is defined  %}
+  {% if layer.attribution is defined and layer.attribution != '' and layer.attribution|length > 0 %}
+    <li>
+      <span class="labelText left">{{ "Attribution" | trans }}:</span>
+        <ul class="left">
+          <li>
+            <span class="metaText">{{ "Title" | trans }}:{{ layer.attribution.title }}</span>
+          </li>
+          <li>
+            <span class="metaText">{{ "OnlineResource" | trans }}:{{ layer.attribution.onlineResource }}</span>
+          </li>
+          <li>
+            <span class="metaText">
+              {{ "LogoUrl" | trans }}:
+              {{ layer.attribution.logoUrl.width }}X{{layer.attribution.logoUrl.height }}
+              {{ layer.attribution.logoUrl.onlineResource.format }} {{ layer.attribution.logoUrl.onlineResource.href }}
+            </span>
+          </li>
+        </ul>
+    </li>
+  {% endif %}
+  {% if layer.identifier is defined and layer.identifier|length > 0 %}
+    <li>
+      <span class="labelText">{{ "Identifier" | trans }}:</span>
       <ul>
         {% for identifier in layer.identifier %}
           {% if identifier.authority is defined and identifier.authority != '' %}
@@ -152,57 +168,57 @@
           {% endif %}
         {% endfor %}
       </ul>
-    {% endif %}
-    <span class="metaText"></span>
-  </li>
-  <li>
-    <span class="labelAlt">{{ "Authority" | trans }}:</span>
-      {% if layer.authority is defined %}
-        <ul>
+    </li>
+  {% endif %}
+  {% if layer.authority is defined and layer.authority|length > 0 %}
+    <li>
+      <span class="labelText">{{ "Authority" | trans }}:</span>
+      <ul>
         {% for authority in layer.authority %}
           <li>
             <span class="metaText">
-        {{ "Url" | trans }} {{ authority.url }}
-        {% if authority.name is defined %}
-        {{ "Name" | trans }} {{ authority.name }}<br/>
-        {% endif%}
+            {{ "Url" | trans }} {{ authority.url }}
+            {% if authority.name is defined %}
+              {{ "Name" | trans }} {{ authority.name }}<br/>
+            {% endif%}
+          </li>
+        {% endfor %}
+      </ul>
+    </li>
+  {% endif %}
+  {% if layer.metadataUrl is defined and layer.metadataUrl|length > 0 %}
+    <li>
+      <span class="labelText">{{ "MetadataUrl" | trans }}:</span>
+        <ul>
+        {% for metadataUrl in layer.metadataUrl %}
+          <li>
+            <span class="metaText">
+              {{ metadataUrl.type }} {{ metadataUrl.onlineresource.format }} {{ metadataUrl.onlineresource.href }}
+            </span>
+          </li>
         {% endfor %}
         </ul>
-      {% endif%}
-  </li>
+    </li>
+  {% endif %}
+  {% if layer.dimension is defined and layer.dimension|length > 0 %}
   <li>
-    <span class="labelAlt">{{ "MetadataUrl" | trans }}:</span>
-    {% if layer.metadataUrl is defined %}
-      <ul>
-      {% for metadataUrl in layer.metadataUrl %}
-        <li>
-          <span class="metaText">
-            {{ metadataUrl.type }} {{ metadataUrl.onlineresource.format }} {{ metadataUrl.onlineresource.href }}
-          </span>
-        </li>
-      {% endfor %}
-      </ul>
-    {% endif%}
+    <span class="labelText">{{ "Dimension" | trans }}:</span>
+    <ul>
+    {% for dimension in layer.dimension %}
+      <li>
+        <span class="metaText">
+          {{ dimension.name }} {{ dimension.units }} {{ dimension.unitSymbol }}
+          {{ dimension.default }} {{ dimension.multipleValues }} {{ dimension.nearestValue }}
+          {{ dimension.current }} {{ dimension.extentValue }}
+        <span>
+      </li>
+    {% endfor %}
+    </ul>
   </li>
+  {% endif %}
+  {% if layer.extent is defined and layer.extent|length > 0 %}
   <li>
-    <span class="labelAlt">{{ "Dimension" | trans }}:</span>
-    {% if layer.dimension is defined %}
-      <ul>
-      {% for dimension in layer.dimension %}
-        <li>
-          <span class="metaText">
-            {{ dimension.name }} {{ dimension.units }} {{ dimension.unitSymbol }}
-            {{ dimension.default }} {{ dimension.multipleValues }} {{ dimension.nearestValue }}
-            {{ dimension.current }} {{ dimension.extentValue }}
-          <span>
-        </li>
-      {% endfor %}
-      </ul>
-    {% endif%}
-  </li>
-  <li>
-    <span class="labelAlt">{{ "Extent" | trans }}:</span>
-    {% if layer.extent is defined %}
+    <span class="labelText">{{ "Extent" | trans }}:</span>
       <ul>
       {% for extent in layer.extent %}
         <li>
@@ -213,11 +229,11 @@
         </li>
       {% endfor %}
       </ul>
-    {% endif%}
   </li>
-  <li>
-    <span class="labelAlt">{{ "DataUrl" | trans }}:</span>
-    {% if layer.dataUrl is defined %}
+  {% endif %}
+  {% if layer.dataUrl is defined and layer.dataUrl|length > 0 %}
+    <li>
+      <span class="labelText">{{ "DataUrl" | trans }}:</span>
       <ul>
       {% for dataUrl in layer.dataUrl %}
         <li>
@@ -227,23 +243,22 @@
         </li>
       {% endfor %}
       </ul>
-    {% endif%}
-  </li>
-  <li>
-    <span class="labelAlt">{{ "FeatureListUrl" | trans }}:</span>
-    {% if layer.featureListUrl is defined %}
-      <ul>
-      {% for featureUrl in layer.featureListUrl %}
-        <li>
-          <span class="metaText">
-            {{ featureUrl.format }} {{ featureUrl.href }}
-          <span>
-        </li>
-      {% endfor %}
-      </ul>
-    {% endif%}
-  </li>
-
+    </li>
+  {% endif %}
+  {% if layer.featureListUrl is defined and layer.featureListUrl|length > 0 %}
+    <li>
+      <span class="labelText">{{ "FeatureListUrl" | trans }}:</span>
+        <ul>
+        {% for featureUrl in layer.featureListUrl %}
+          <li>
+            <span class="metaText">
+              {{ featureUrl.format }} {{ featureUrl.href }}
+            <span>
+          </li>
+        {% endfor %}
+        </ul>
+    </li>
+  {% endif %}
   {% if layer.sublayer|length > 0 %}
     {% for sublayer in layer.sublayer %}
       <li>
