--- a/src/Mapbender/WmsBundle/Resources/views/Repository/start.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/start.html.twig
@@ -1,20 +1,20 @@
-<fieldset class="serviceAddBox left">
+<fieldset class="serviceAddBox left box">
   <legend>{{"OGC WMS"|trans}}</legend>
   <form action="{{path('mapbender_wms_repository_create')}}" method="post" novalidate="novalidate">
       {{ form_errors(form) }}
 
       {{ form_errors(form.originUrl) }}
-      <label class="left label" for="{{ form.originUrl.get('id') }}">{{"Serviceurl:" | trans}}</label>
+      <label class="left labelInput" for="{{ form.originUrl.get('id') }}">{{"Serviceurl:" | trans}}</label>
       {{ form_widget(form.originUrl, { 'attr': {'class': 'input'} }) }}
       <div class="clearContainer"></div>
 
       {{ form_errors(form.username) }}
-      <label class="left label" for="{{ form.username.get('id') }}">{{"Username:" | trans}}</label>
+      <label class="left labelInput" for="{{ form.username.get('id') }}">{{"Username:" | trans}}</label>
       {{ form_widget(form.username, { 'attr': {'class': 'input'} }) }}
       <div class="clearContainer"></div>
 
       {{ form_errors(form.password) }}
-      <label class="left label" for="{{ form.password.get('id') }}">{{"Password:" | trans}}</label>
+      <label class="left labelInput" for="{{ form.password.get('id') }}">{{"Password:" | trans}}</label>
       {{ form_widget(form.password, { 'attr': {'class': 'input'} }) }}
       <div class="clearContainer"></div>
 
