--- a/src/Mapbender/ManagerBundle/Resources/views/Repository/confirmdelete.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Repository/confirmdelete.html.twig
@@ -5,7 +5,7 @@
 {% block manager_content %}
 <p>{{ "Really delete? "}}</p>
 
-<form method="POST" action="{{ url( "mapbender_manager_repository_delete",{"id": source.id}) }}" >
+<form method="POST" action="{{ url( "mapbender_manager_repository_delete",{"sourceId": source.id}) }}" >
     <div class="btn-group repository-actions">
         <input type="submit" class="btn btn-primary" value="OK"  />
         {% if app.request.get('return') == "view" %}
