--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-elements.html.twig
@@ -10,7 +10,10 @@
     <li class="dummy"></li>
     {% for element in application.getElementsByRegion(region) %}
     <li class="element" data-id="{{element.id}}" data-href="{{ path('mapbender_manager_element_weight', {'id': element.id})}}">
-        <span class="title">({{element.id}}) {{ element.title }}</span>
+        <span class="title">
+            <input data-href="{{ path('mapbender_manager_element_enable', { 'id': element.id })}}" data-id="{{ element.id }}" type="checkbox" {% if element.enabled %} checked="checked" {% endif %} />
+            ({{element.id}}) {{ element.title }}
+        </span>
         <span class="type">{{ element_class_title(element) }}</span>
             <div class="btn-group">
                 <a href="{{ path('mapbender_manager_element_edit', {'slug': application.slug, 'id': element.id})}}" class="btn">{{ 'Edit' | trans }}</a>
