Typo in ZoomBar template fixed

--- a/src/Mapbender/CoreBundle/Resources/views/Element/zoombar.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/zoombar.html.twig
@@ -27,7 +27,7 @@
             <a title="{{ "Zoom by world" | trans }}"></a>
         </div>
         {% endif %}
-        {% if 'zoom_slieder' in configuration.components %}
+        {% if 'zoom_slider' in configuration.components %}
         <div class="zoom-in">
             <a title="{{ "Zoom in" | trans }}"></a>
         </div>
