--- a/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
@@ -26,28 +26,30 @@
                     <td class="colselect">{{ form_widget(form.format) }}</td>
                     <td class="coltitle">{{ form_label(form.visible) }}:</td>
                     <td class="colinputcheckbox">{{ form_widget(form.visible) }}</td>
+                    <td class="coltitle">{{ form_label(form.baselayer) }}:</td>
+                    <td class="colinputcheckbox">{{ form_widget(form.baselayer) }}</td>
                 </tr>
                 <tr>
                     <td class="coltitle">{{ form_label(form.infoformat) }}:</td>
                     <td class="colselect">{{ form_widget(form.infoformat) }}</td>
                     <td class="coltitle">{{ form_label(form.proxy) }}:</td>
                     <td class="colinputcheckbox">{{ form_widget(form.proxy) }}</td>
+                    <td class="coltitle">&nbsp;</td>
+                    <td class="colinputcheckbox">&nbsp;</td>
                 </tr>
                 <tr>
                     <td class="coltitle">{{ form_label(form.exceptionformat) }}:</td>
                     <td class="colselect">{{ form_widget(form.exceptionformat) }}</td>
                     <td class="coltitle">{{ form_label(form.transparency) }}:</td>
                     <td class="colinputcheckbox">{{ form_widget(form.transparency) }}</td>
+                    <td class="coltitle">&nbsp;</td>
+                    <td class="colinputcheckbox">&nbsp;</td>
                 </tr>
                 <tr>
                     <td class="coltitle">{{ form_label(form.opacity) }}:</td>
                     <td class="colselect">{{ form_widget(form.opacity) }}</td>
                     <td class="coltitle">{{ form_label(form.tiled) }}:</td>
                     <td class="colinputcheckbox">{{ form_widget(form.tiled) }}</td>
-                </tr>
-                <tr>
-                    <td class="coltitle">&nbsp;</td>
-                    <td class="colselect">&nbsp;</td>
                     <td class="coltitle">&nbsp;</td>
                     <td class="colinputcheckbox">&nbsp;</td>
                 </tr>
