remove commented code; remove bootstrap markup; add markup for design;

--- a/src/Mapbender/CoreBundle/Resources/views/Group/base.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Group/base.html.twig
@@ -1,11 +1,7 @@
 {% extends 'MapbenderCoreBundle::backend.html.twig' %}
 
-{#{% stylesheets '@MapbenderCoreBundle/Resources/public/style/*' %}
-    <link  rel="stylesheet" href="{{ asset_url }}" />
-{% endstylesheets  %}  
-#}
 {% block subnavigation %}
-<nav class="action">
+<nav>
     <h1>Group Navigation</h1>
     <ul>
       <li><a href="{{ path('mapbender_core_group_create') }}">{% trans %}Add Group{% endtrans %}</a></li>
