--- a/src/Mapbender/CoreBundle/Resources/views/User/index.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/User/index.html.twig
@@ -13,7 +13,7 @@
 {% block content %}
 
 {% if userList|length >0 %}
-  <table class="listable" >
+  <table>
     <caption>{% trans %}Available Users{% endtrans %}</caption>
     <thead>
       <tr>
@@ -26,8 +26,8 @@
       <tr>
         <td>{{ user.displayName }}</td>
         <td>
-          <a title="{{"Edit"|trans}} '{{user.displayName}}'"   class="edit" href="{{path("mapbender_core_user_edit",{"userId":user.id})}}">{{ "Edit"|trans }}</a>
-          <a title="{{"Delete"|trans}} '{{user.displayName}}'" class="confirmdelete" href="{{path("mapbender_core_user_confirmdelete",{"userId":user.id})}}">{{ "Delete"|trans }}</a>
+          <a title="{{"Edit"|trans}} '{{user.displayName}}'"   href="{{path("mapbender_core_user_edit",{"userId":user.id})}}">{{ "Edit"|trans }}</a>
+          <a title="{{"Delete"|trans}} '{{user.displayName}}'" href="{{path("mapbender_core_user_confirmdelete",{"userId":user.id})}}">{{ "Delete"|trans }}</a>
         </td>
       </tr>
       {% endfor %}
